Fix Header on IE.

--- a/source/styles/mps.scss
+++ b/source/styles/mps.scss
@@ -19,23 +19,33 @@ img.logo {
   background: #002F60;
 
   ul {
-    margin-left: 0;
+    margin: 0;
+    padding: 0;
+    border-radius: 3px;
   }
 
-  .name h1 {
-    font-size: 0.8em;
-    letter-spacing: 2px;
-    font-style: italic;
+  .name {
+    width: 300px;
+    overflow: visible;
 
-    a {
-      width: auto;
+    h1 {
+      font-size: 0.7em;
+      letter-spacing: 1px;
+      font-style: italic;
+
+      a {
+        width: auto;
+      }
     }
   }
 
   .top-bar-section li a {
+    font-size: 0.8em;
     font-weight: normal;
     background: #002F60;
-    padding: 0 10px;
+    padding: 0 7px;
+    border-radius: 3px;
+    margin: 0;
   }
 }
 
